menu de administracion

--- a/web/Front/Login.xhtml
+++ b/web/Front/Login.xhtml
@@ -8,52 +8,96 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="contenido">
-    <div class="mj_lightgraytbg mj_bottompadder80">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
-                    <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
-                        <h1><span>Ingresar a mi cuenta</span></h1>
-                        <p>Metrópolis es la plataforma que conecta usuarios, con trabajadores independientes que tienen la capacidad, experiencia y disposición para llevar a cabo los distintos trabajos que necesitas.</p>
+        <div class="mj_lightgraytbg mj_bottompadder80">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
+                        <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
+                            <h1><span>Ingresar a mi cuenta</span></h1>
+                            <p>Metrópolis es la plataforma que conecta usuarios, con trabajadores independientes que tienen la capacidad, experiencia y disposición para llevar a cabo los distintos trabajos que necesitas.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 col-sm-12 col-xs-12">
-                    <div class="mj_pricingtable mj_greentable mj_login_form_wrapper">
-                        <form>
-                            <div class="mj_login_form">
-                                <div class="form-group">
-                                    <input type="text" placeholder="Nombre de ususario o Email" id="uname" class="form-control"></input>
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" placeholder="contrasena" id="upassword" class="form-control"></input>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mj_toppadder20">
-                                        <div class="form-group  pull-left">
-                                            <div class="mj_checkbox">
-                                                <input type="checkbox" value="1" id="check2" name="checkbox"></input>
-                                                <label for="check2"></label>
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 col-sm-12 col-xs-12">
+                        <div class="mj_pricingtable mj_greentable mj_login_form_wrapper">
+                            <h:form id="formLogin">
+                                <div class="mj_login_form">
+                                    <p:growl id="growl" sticky="true" showDetail="true" life="3000" globalOnly="true" />
+                                    <div class="form-group">
+                                        <p:inputText id="email" styleClass="form-control" 
+                                                     value="#{loginBean.usuarioLog.email}" 
+                                                     required="true" onkeydown="setaFoco(this)"
+                                                     requiredMessage="Cual es su email?"
+                                                     validatorMessage="Formato de correo incorrecto"
+                                                     placeholder="Email">
+                                            <f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+                                            <p:clientValidator />
+                                        </p:inputText>
+                                        <p:message for="email" ></p:message>
+                                    </div>
+                                    <div class="form-group">
+                                        <p:password id="contraseña" styleClass="form-control"  
+                                                    value="#{loginBean.usuarioLog.contrasena}"
+                                                    promptLabel="Por favor ingrese una contraseña" 
+                                                    required="true" 
+                                                    requiredMessage="Por favor ingrese su contraseña"
+                                                    validatorMessage="Contraseña incorrecta o sin coincidencia. Ingrese una contraseña de minimo 8 caracteres."
+                                                    onkeydown="setaFoco(this)"
+                                                    placeholder="Contraseña">
+                                            <f:validateLength minimum="8" maximum="45" ></f:validateLength>
+                                            <p:clientValidator />
+                                        </p:password>
+                                        <p:message for="contraseña" ></p:message>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mj_toppadder20">
+                                            <div class="form-group  pull-left">
+                                                <div class="mj_checkbox">
+                                                    <input type="checkbox" value="1" id="check2" name="checkbox"></input>
+                                                    <label for="check2"></label>
+                                                </div>
+                                                <span> recordarme</span>
                                             </div>
-                                            <span> recordarme</span>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mj_toppadder20">
-                                        <div class="form-group pull-right">
-                                            <span><a href="#">Olvide contrasena</a></span>
+                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mj_toppadder20">
+                                            <div class="form-group pull-right">
+                                                <span><a href="#">Olvide contrasena</a></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="mj_pricing_footer">
-                                <a href="#">Ingresar</a>
-                            </div>
-                        </form>
+                                <div class="mj_pricing_footer">
+                                    <p:commandLink id="loginLink" validateClient="true" styleClass="mj_showmorebtn mj_greenbtn" value="Iniciar Sesion" 
+                                                   update="growl formLogin" action="#{loginBean.login(event)}" 
+                                                   oncomplete="handleLoginRequest(xhr, status, args)" >
+                                        <h:outputText styleClass="mj_showmorebtn mj_greenbtn" value="Iniciar Sesión" />
+
+                                    </p:commandLink>
+                                </div>
+                            </h:form>
+                        </div>
                     </div>
                 </div>
             </div>
+            <script type="text/javascript">
+                function handleLoginRequest(xhr, status, args) {
+                    if (args.validationFailed || !args.loggedIn) {
+                        //cambio
+                        jQuery('#formLogin').effect("shake", {times: 5}, 100);
+                    } else {
+                        //cambio: ruta enviada desde el bean.
+                        location.href = args.ruta;
+                    }
+                }
+
+                function setaFoco(elemento) {
+                    var keyCode = event.keyCode ? event.keyCode : event.which ? event.which : event.charCode;
+                    if (keyCode == 13) {
+                        jQuery('#formLogin\\:loginLink').click();
+                    }
+                }
+            </script>
         </div>
-    </div>
     </ui:define>
 </ui:composition>
