--- a/web/Backend/Miembro.xhtml
+++ b/web/Backend/Miembro.xhtml
@@ -1,15 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:fn="http://java.sun.com/jsp/jstl/functions">
-
-    <body>
-
-        <ui:composition template="/WEB-INF/templates/MainTemplate.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="./MainTemplete_Logeado.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
             <ui:define name="title">
                 Miembros
@@ -67,7 +63,7 @@
                                     <h:outputText value="#{usuario.estado}" />
                                 </p:column>
                                 <f:facet name="footer">
-                                    En total hay #{fn:length(usuarioBean.usuarios)} usuarios.
+                                    
                                 </f:facet>
 
                                 <p:column>
@@ -378,6 +374,3 @@
             </ui:define>
 
         </ui:composition>
-
-    </body>
-</html>
