--- a/web/Backend/categoria.xhtml
+++ b/web/Backend/categoria.xhtml
@@ -1,13 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <body>
-
-        <ui:composition template="./../../backend/Usuario/TemplateA.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="./MainTemplete_Logeado.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
             <ui:define name="title">
                 Categoria
@@ -109,16 +107,9 @@
                         </h:form>
                     </div>
                 </div>
-                <script>
-                    $(document).ready(function () {
-
-                        document.getElementById("liAdminCategoria").className = "active";
-                    });
-                </script>
+                
             </ui:define>
 
         </ui:composition>
 
-    </body>
-</html>
-
+    
