--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -75,6 +75,20 @@
                                         </li>
                                     </ul>
                                 </li>
+                                <li style="display: #{loginBean.isAdmin() ? 'list-item' : 'none'};" ><a href="#">Administración</a>
+                                    <ul class="sub_menu">
+                                        <li><a href="../Backend/Miembro.xhtml">Miembros</a>
+                                        </li>
+                                        <li><a href="../Backend/categoria.xhtml">Categorias</a>
+                                        </li>
+                                        <li><a href="../Backend/etiqueta.xhtml">Etiquetas</a>
+                                        </li>
+                                        <li><a href="../Backend/jornada.xhtml">Jornadas</a>
+                                        </li>
+                                        <li><a href="../Backend/ubicacion.xhtml">ubicaciones</a>
+                                        </li>
+                                    </ul>
+                                </li>
                                 <li><a href="Contacto.xhtml">CONTACTO</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right mj_right_menu mj_withoutlogin_menu">
