menu de administracion / agregue pago al contrato.

--- a/web/Backend/MainTemplete_Logeado.xhtml
+++ b/web/Backend/MainTemplete_Logeado.xhtml
@@ -75,14 +75,22 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Administración</a>
+                                <li style="display: #{loginBean.isAdmin() ? 'list-item' : 'none'};" ><a href="#">Administración</a>
                                     <ul class="sub_menu">
-                                        <li><a href="../Backend/Miembro.xhtml">Maestros</a>
+                                        <li><a href="../Backend/Miembro.xhtml">Miembros</a>
                                         </li>
-                                        
+                                        <li><a href="../Backend/categoria.xhtml">Categorias</a>
+                                        </li>
+                                        <li><a href="../Backend/etiqueta.xhtml">Etiquetas</a>
+                                        </li>
+                                        <li><a href="../Backend/jornada.xhtml">Jornadas</a>
+                                        </li>
+                                        <li><a href="../Backend/ubicacion.xhtml">ubicaciones</a>
+                                        </li>
+                                        <li><a href="../Backend/liquidar.xhtml">Liquidar</a>
+                                        </li>
                                     </ul>
-                                </li>
-                                <li><a href="../Front/Contacto.xhtml">CONTACTO</a></li>
+                                </li>                                
                             </ul>
                             <ul class="nav navbar-nav navbar-right mj_right_menu mj_withoutlogin_menu">
                                 <li class="mj_searchbtn"><a href="#"><i class="fa fa-search"></i></a>
