--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -87,6 +87,8 @@
                                         </li>
                                         <li><a href="../Backend/ubicacion.xhtml">ubicaciones</a>
                                         </li>
+                                        <li><a href="../Backend/liquidar.xhtml">Liquidar</a>
+                                        </li>
                                     </ul>
                                 </li>
                                 <li><a href="Contacto.xhtml">CONTACTO</a></li>
