--- a/web/Front/Detalle_Trabajador.xhtml
+++ b/web/Front/Detalle_Trabajador.xhtml
@@ -40,7 +40,7 @@
                                                     <label>Calificacion</label><span class="mj_green_text">*****</span>
                                                 </li>
                                                 <li>
-                                                    <label>Promedio costo trabajo</label><span class="mj_green_text"><h:outputLabel value="#{ofertaBean.ofertaSelected.costo}"><f:convertNumber type="currency" currencyCode="COP" currencySymbol="$" /></h:outputLabel></span>
+                                                    <label>Promedio costo trabajo</label><span class="mj_green_text"><h:outputLabel value="#{ofertaBean.ofertaSelected.costo}"><f:convertNumber type="currency" currencySymbol="$" maxFractionDigits="0" /></h:outputLabel></span>
                                                 </li>
                                             </ul>
                                         </div>
