--- a/web/Front/index.xhtml
+++ b/web/Front/index.xhtml
@@ -622,7 +622,7 @@
 
                                                 <p:column >
                                                     <h:outputText value="#{oferta.costo}">
-                                                        <f:convertNumber type="currency" currencySymbol="$" />
+                                                        <f:convertNumber type="currency" currencySymbol="$" maxFractionDigits="0" />
                                                     </h:outputText>
                                                 </p:column>
 
