Se realizo toda la liquidacion de contratos

--- a/web/Backend/contrato.xhtml
+++ b/web/Backend/contrato.xhtml
@@ -20,6 +20,7 @@
             </ui:define>
 
             <ui:define name="contenido">
+                <f:event type="preRenderView" listener="#{loginBean.autorizarAdmin()}"></f:event>
                 <div class="mj_lightgraytbg mj_toppadder80 mj_bottompadder80">
                     <div class="container">
                         <p:growl id="msgs" globalOnly="true"/> 
