--- a/web/Backend/trabajador.xhtml
+++ b/web/Backend/trabajador.xhtml
@@ -19,6 +19,7 @@
             </ui:define>
 
             <ui:define name="contenido">
+                <f:event type="preRenderView" listener="#{loginBean.autorizarAdmin()}"></f:event>
                 <div class="mj_lightgraytbg mj_toppadder80 mj_bottompadder80">
                     <div class="container">
 
