--- a/web/Backend/jornada.xhtml
+++ b/web/Backend/jornada.xhtml
@@ -20,7 +20,7 @@
             </ui:define>
 
             <ui:define name="contenido">
-                <f:event type="preRenderView" listener="#{loginBean.autorizarAdmin()}"></f:event>
+                <f:event type="preRenderView" listener="#{loginBean.AutorizarAdmin}"></f:event>
                 <div class="mj_lightgraytbg mj_toppadder80 mj_bottompadder80">
                     <div class="container">
 
