--- a/web/Backend/liquidado.xhtml
+++ b/web/Backend/liquidado.xhtml
@@ -9,7 +9,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="contenido">
-        <f:event type="preRenderView" listener="#{loginBean.autorizarAdmin()}"></f:event>
+        <f:event type="preRenderView" listener="#{loginBean.AutorizarAdmin}"></f:event>
         <div class="mj_lightgraytbg mj_resumepreview mj_toppadder80 mj_bottompadder80">
             <div class="container">
                 <div class="row">
