--- a/web/Backend/liquidar.xhtml
+++ b/web/Backend/liquidar.xhtml
@@ -9,7 +9,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="contenido">
-        <f:event type="preRenderView" listener="#{loginBean.autorizarAdmin()}"></f:event>
+        <f:event type="preRenderView" listener="#{loginBean.AutorizarAdmin}"></f:event>
         <div class="mj_lightgraytbg mj_resumepreview mj_toppadder80 mj_bottompadder80">
             <div class="container">
                 <div class="row">
@@ -25,6 +25,10 @@
                             <p:column headerText="Id" style="text-align:center">
                                 <h:outputText value="#{contrato.idContrato}" />
                             </p:column>
+                            <p:column headerText="Calificación" style="text-align:center">
+                                <h:outputText value="#{contrato.calificacion}" />
+                            </p:column>
+                            
                             <p:column headerText="Nombres" style="text-align:center">
                                 <h:outputText value="#{liquidacionBean.getCedula(contrato)}" />
                             </p:column>
