Avances ajustes Brian Febrero 2

--- a/web/Front/Como_Funciona.xhtml
+++ b/web/Front/Como_Funciona.xhtml
@@ -35,14 +35,14 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="mj_recent_workit text-center">
                             <div class="mj_workit_innerheader">
-                                <h4>Como contratar</h4>
+                                <h4>Como encuentro un trabajo</h4>
                             </div>
                             <div class="mj_workit_info">
                                 <img src="../images/COMOCONTRATAR.png" class="img-responsive" alt=""></img>
                                     <p class="mj_toppadder50">En metrópolis contratar a un independiente o una Mipyme es muy fácil no importa que tan grande o pequeño sea el trabajo aquí encontraras el indicado para realizarlo.</p>
                             </div>
                             <div class="mj_workit_innerfooter">
-                                <a href="#">leer mas...</a>
+                                <a href="Como_Contratar.xhtml">leer mas...</a>
                             </div>
                         </div>
                     </div>
