--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -52,7 +52,7 @@
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <div class="collapse navbar-collapse mj_navmenu" id="mj_menu">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="index.xhtml">INICIO</a>
+                                <li ><a href="index.xhtml">INICIO</a>
                                 </li>
                                 <li><a href="Trabajador.xhtml">BUSCAR TRABAJO</a></li>
                                 <li><a href="Ofertar.xhtml">OFERTAR</a>
@@ -65,7 +65,7 @@
                                         </li>
                                         <li><a href="#">COMO FUNCIONA PAGOS</a>
                                         </li>
-                                        <li><a href="Como_Contratar.xhtml">COMO CONTRATAR</a>
+                                        <li><a href="Como_Contratar.xhtml">CÓMO ENCUENTRO UN TRABAJO</a>
                                         </li>
                                         <li><a href="#">COMO TERMINAR TRABAJO</a>
                                         </li>                                        
