--- a/web/Front/Ofertar.xhtml
+++ b/web/Front/Ofertar.xhtml
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                     <div class="mj_mainheading mj_toppadder50 mj_bottompadder50">
-                        <h1>O<span>frecer</span> <span>un</span> T<span>rabajo</span></h1>
+                        <h1><span>Realizar</span> <span>Oferta</span></h1>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                                     <p:message for="somJornada" />
                                 </div> 
                               <div class="form-group">
-                                    <label>Costo</label>
+                                    <label>Presupuesto</label>
                                     <p:inputText id="costo" styleClass="form-control" placeholder="Ingrese el costo de su trabajo" value="#{ofertaBean.ofertaCreate.costo}" 
                                                  required="true" requiredMessage="Cual es el costo de su trabajo?" validatorMessage="El valor ingresado es incorrecto." >
                                         <f:validateDoubleRange minimum="1" maximum="2147483647" />
