--- a/web/Front/Trabajador.xhtml
+++ b/web/Front/Trabajador.xhtml
@@ -30,7 +30,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             <div class="row">
                                 <div class="mj_showjob">
-                                    <p>showing <strong>368</strong> job offers</p>
+                                    <p>Mostrando <strong>#{ofertaBean.ofertasCount}</strong> Ofertas de trabajo</p>
                                 </div>
                             </div>
                         </div>
@@ -124,9 +124,7 @@
 
                                     </p:dataTable>
                                 </h:form>
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4">
-                                    <div class="mj_showmore"> <a href="#" class="mj_showmorebtn mj_blackbtn">Show More</a> </div>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
