--- a/web/Backend/MainTemplete_Logeado.xhtml
+++ b/web/Backend/MainTemplete_Logeado.xhtml
@@ -52,7 +52,7 @@
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <div class="collapse navbar-collapse mj_navmenu" id="mj_menu">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="../Front/index.xhtml">INICIO</a>
+                                <li><a href="../Front/index.xhtml">INICIO</a>
                                 </li>
                                 <li><a href="../Front/Trabajador.xhtml">BUSCAR TRABAJO</a></li>
                                 <li><a href="../Front/Ofertar.xhtml">OFERTAR</a>
