--- a/web/Front/index.xhtml
+++ b/web/Front/index.xhtml
@@ -630,7 +630,7 @@
                                         </h:form>
                                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4">
                                             <div class="mj_showmore">
-                                                <a href="buscarOfertas.xhtml" class="mj_blackbtn mj_showmorebtn">Mostrar más</a>
+                                                <a href="Trabajador.xhtml" class="mj_blackbtn mj_showmorebtn">Mostrar más</a>
                                             </div>
                                         </div>
                                     </div>
@@ -738,7 +738,7 @@
                                 <div class="mj_videosection_data mj_toppadder50">
                                     <h1>Como Funciona</h1>
                                     <p>En metrópolis te ayudamos a ponerte en contacto de manera ágil, confiable y segura con la persona indicada para realizar el trabajo que necesitas.En solo 3 pasos ENCEUNTRA, COTIZA &amp; CONTRATACuéntanos que servicios buscas ejemplo: clases de matemáticas, pintor, modista, etc. Espera que nuestro buscador haga su trabajo. </p>
-                                    <a href="#" class="mj_readmore">Leer Mas</a>
+                                    <a href="Como_Funciona.xhtml" class="mj_readmore">Leer Mas</a>
                                 </div>
                             </div>
                         </div>
